# Traffic_light

./: README.md
traffic_light/: CMakeLists.txt
traffic_light/app/: CMakeLists.txt
traffic_light/app/include/: utils.h
traffic_light/app/src/: traffic_light.c  utils.c
traffic_light/hal/: CMakeLists.txt
traffic_light/hal/include/hal/: buzzer.h  sharedMem-Linux.h
traffic_light/hal/src/: buzzer.c  sharedMem-Linux.c
traffic_light/pru-tl/: CMakeLists.txt  controlPRU.c  sharedDataStruct.h
